added response body to documentation
